@startuml

title __FACEDETECTOR's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace facedetector {
      class jp.oist.abcvlib.camera.facedetector.FaceDetectorProcessor {
          {static} - TAG : String
          - detector : FaceDetector
          + FaceDetectorProcessor()
          + FaceDetectorProcessor()
          + stop()
          # detectInImage()
          # onFailure()
          # onSuccess()
          {static} - logExtrasForTesting()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace facedetector {
      class jp.oist.abcvlib.camera.facedetector.FaceGraphic {
          {static} - BOX_STROKE_WIDTH : float
          {static} - COLORS : int[][]
          {static} - FACE_POSITION_RADIUS : float
          {static} - ID_TEXT_SIZE : float
          {static} - ID_X_OFFSET : float
          {static} - ID_Y_OFFSET : float
          {static} - NUM_COLORS : int
          - boxPaints : Paint[]
          - face : Face
          - facePositionPaint : Paint
          - idPaints : Paint[]
          - labelPaints : Paint[]
          + draw()
          ~ FaceGraphic()
          - drawFaceLandmark()
      }
    }
  }
  

  jp.oist.abcvlib.camera.facedetector.FaceDetectorProcessor -up-|> jp.oist.abcvlib.camera.VisionProcessorBase
  jp.oist.abcvlib.camera.facedetector.FaceGraphic -up-|> jp.oist.abcvlib.camera.GraphicOverlay.Graphic


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
